--- a/crates/cloud-sdk/Cargo.toml
+++ b/crates/cloud-sdk/Cargo.toml
@@ -12,12 +12,20 @@ serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 serde_repr = "^0.1"
 serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
 url = "^2.5"
-reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
+reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
+sha2 = "0.10"
+hex = "0.4"
+urlencoding = "2.1"
+futures = "0.3"
+tokio-util = { version = "0.7", features = ["codec", "io"] }
+bytes = "1.0"
+pin-project-lite = "0.2"
+thiserror = "1.0"
 
 [dev-dependencies]
 httpmock = "0.7"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 
 [lints.clippy]
 too_many_arguments = "allow"
