--- a/crates/cloud-sdk/Cargo.toml
+++ b/crates/cloud-sdk/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 serde_repr = "^0.1"
 serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
+derive_builder = "0.20"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
 url = "^2.5"
 reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
