--- a/crates/cloud-sdk/Cargo.toml
+++ b/crates/cloud-sdk/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cloud-sdk"
+name = "tensorlake-cloud-sdk"
 version = "0.3.12"
 authors = ["support@tensorlake.ai"]
 description = "A Rust SDK for interacting with Tensorlake Cloud APIs."
@@ -7,23 +7,23 @@ license = "Apache-2.0"
 edition = "2024"
 
 [dependencies]
-serde = { version = "^1.0", features = ["derive"] }
-serde_json = "^1.0"
-serde_repr = "^0.1"
-serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
-derive_builder = "0.20"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
-url = "^2.5"
-reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
-sha2 = "0.10"
-hex = "0.4"
-urlencoding = "2.1"
-futures = "0.3"
-tokio-util = { version = "0.7", features = ["codec", "io"] }
-bytes = "1.0"
-pin-project-lite = "0.2"
-thiserror = "1.0"
-uuid = { version = "1.18.1", features = ["serde"] }
+bytes = { workspace = true }
+derive_builder = { workspace = true }
+futures = { workspace = true }
+hex = { workspace = true }
+pin-project-lite = { workspace = true }
+reqwest = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+serde_repr = { workspace = true }
+serde_with = { workspace = true }
+sha2 = { workspace = true }
+thiserror = { workspace = true }
+tokio = { workspace = true }
+tokio-util = { workspace = true }
+url = { workspace = true }
+urlencoding = { workspace = true }
+uuid = { workspace = true }
 
 [dev-dependencies]
 httpmock = "0.7"
