Rewrite client to be able to inject middlewares.
Allow to create arbitrary data structures.

--- a/crates/cloud-sdk/Cargo.toml
+++ b/crates/cloud-sdk/Cargo.toml
@@ -7,12 +7,14 @@ license = "Apache-2.0"
 edition = "2024"
 
 [dependencies]
+arbitrary = { version = "1.4.2", features = ["derive"] }
 bytes = { workspace = true }
 derive_builder = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true }
 pin-project-lite = { workspace = true }
 reqwest = { workspace = true }
+reqwest-middleware = { version = "0.4.2", features = ["json", "multipart"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_repr = { workspace = true }
@@ -26,7 +28,10 @@ urlencoding = { workspace = true }
 uuid = { workspace = true }
 
 [dev-dependencies]
-httpmock = "0.7"
+data-encoding = "2.5"
+needs_env_var = "1.1"
+reqwest-vcr = "0.3.0"
+zip = "0.6"
 
 [lints.clippy]
 too_many_arguments = "allow"
