--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,15 +15,18 @@ rust-version = "1.90.0"
 [workspace.dependencies]
 bytes = "1.0"
 derive_builder = "0.20"
+flate2 = "1.0"
 futures = "0.3"
 hex = "0.4"
 pin-project-lite = "0.2"
 reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
+reqwest-middleware = { version = "0.4.2", features = ["json", "multipart"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_repr = "0.1"
 serde_with = { version = "3.8", default-features = false, features = ["base64", "std", "macros"] }
 sha2 = "0.10"
+tar = "0.4"
 thiserror = "1.0"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
 tokio-util = { version = "0.7", features = ["codec", "io"] }
