Complete application manifest fields to ensure we can trigger requests.

--- a/crates/cloud-sdk/Cargo.toml
+++ b/crates/cloud-sdk/Cargo.toml
@@ -17,6 +17,7 @@ reqwest = { workspace = true }
 reqwest-middleware = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_path_to_error = "0.1.20"
 serde_repr = { workspace = true }
 serde_with = { workspace = true }
 sha2 = { workspace = true }
