--- a/crates/cloud-sdk/Cargo.toml
+++ b/crates/cloud-sdk/Cargo.toml
@@ -31,7 +31,11 @@ uuid = { workspace = true }
 
 [dev-dependencies]
 data-encoding = "2.5"
+rand = "0.9.2"
 zip = "0.6"
 
 [lints.clippy]
 too_many_arguments = "allow"
+
+[features]
+integration-tests = []
