Integration tests and other improvements (#1)
* Rewrite client to be able to inject middlewares.

Allow to create arbitrary data structures.

* Add integration tests for the secrets api.

* Add integration tests for the images api.

* Add integration tests for applications.

* Remove unused dependencies.

* Complete application manifest fields to ensure we can trigger requests.

* Setup integration tests in a different feature flag.

Enable the feature flag in a different CI job.
Ensure that names and versions are unique.

* Add environment variables for CI.

* Fix environment and docs.

* Use a default message when a response error body is empty.

* Add some builder defaults for fields that are not required.

* Fix secrets listing in integration tests.

* Increase the number of secrets the api returns.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,18 @@
-name: CI
+name: Tests
 
 on:
   push:
     branches: [main]
   pull_request:
 
+env:
+  TENSORLAKE_ORGANIZATION_ID: ${{ vars.TENSORLAKE_ORGANIZATION_ID }}
+  TENSORLAKE_PROJECT_ID: ${{ vars.TENSORLAKE_PROJECT_ID }}
+  TENSORLAKE_API_KEY: ${{ secrets.TENSORLAKE_API_KEY }}
+  TENSORLAKE_API_URL: ${{ vars.TENSORLAKE_API_URL }}
+
 jobs:
-  build:
+  unit-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,3 +27,12 @@ jobs:
         run: cargo fmt --check
       - name: Run clippy
         run: cargo clippy -- -D warnings
+  integration-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+      - name: Run integrationtests
+        run: cargo test --features integration-tests --verbose
