Create an example that shows how to poll for progress updates.

--- a/crates/cloud-sdk/Cargo.toml
+++ b/crates/cloud-sdk/Cargo.toml
@@ -39,3 +39,7 @@ too_many_arguments = "allow"
 
 [features]
 integration-tests = []
+
+[[example]]
+name = "poll_progress_updates"
+path = "../../examples/poll_progress_updates.rs"
