--- a/crates/cloud-sdk/Cargo.toml
+++ b/crates/cloud-sdk/Cargo.toml
@@ -14,6 +14,7 @@ futures = { workspace = true }
 hex = { workspace = true }
 pin-project-lite = { workspace = true }
 reqwest = { workspace = true }
+reqwest-eventsource = { workspace = true }
 reqwest-middleware = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
