--- a/crates/cloud-sdk/Cargo.toml
+++ b/crates/cloud-sdk/Cargo.toml
@@ -14,6 +14,7 @@ futures = { workspace = true }
 hex = { workspace = true }
 pin-project-lite = { workspace = true }
 reqwest = { workspace = true }
+reqwest-eventsource = { workspace = true }
 reqwest-middleware = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -39,3 +40,7 @@ too_many_arguments = "allow"
 
 [features]
 integration-tests = []
+
+[[example]]
+name = "poll_progress_updates"
+path = "../../examples/poll_progress_updates.rs"
