Switch created_at fields to DateTime.
This ensures the serialization format and precission better then i64.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rust-version = "1.90.0"
 
 [workspace.dependencies]
 bytes = "1.0"
+chrono = { version = "0.4.42", features = ["serde"] }
 derive_builder = "0.20"
 flate2 = "1.0"
 futures = "0.3"
